// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform has a list of supported methods for azure 1`] = `
Array [
  "addAssignees",
  "addReviewers",
  "branchExists",
  "cleanRepo",
  "commitFiles",
  "createPr",
  "deleteBranch",
  "deleteLabel",
  "ensureComment",
  "ensureCommentRemoval",
  "ensureIssue",
  "ensureIssueClosing",
  "findIssue",
  "findPr",
  "getAllRenovateBranches",
  "getBranchLastCommitTime",
  "getBranchPr",
  "getBranchStatus",
  "getBranchStatusCheck",
  "getCommitMessages",
  "getFile",
  "getFileList",
  "getIssueList",
  "getPr",
  "getPrBody",
  "getPrList",
  "getRepoForceRebase",
  "getRepoStatus",
  "getRepos",
  "getVulnerabilityAlerts",
  "initPlatform",
  "initRepo",
  "isBranchStale",
  "mergeBranch",
  "mergePr",
  "setBaseBranch",
  "setBranchPrefix",
  "setBranchStatus",
  "updatePr",
]
`;

exports[`platform has a list of supported methods for gitea 1`] = `
Array [
  "addAssignees",
  "addReviewers",
  "branchExists",
  "cleanRepo",
  "commitFiles",
  "createPr",
  "deleteBranch",
  "deleteLabel",
  "ensureComment",
  "ensureCommentRemoval",
  "ensureIssue",
  "ensureIssueClosing",
  "findIssue",
  "findPr",
  "getAllRenovateBranches",
  "getBranchLastCommitTime",
  "getBranchPr",
  "getBranchStatus",
  "getBranchStatusCheck",
  "getCommitMessages",
  "getFile",
  "getFileList",
  "getIssueList",
  "getPr",
  "getPrBody",
  "getPrList",
  "getRepoForceRebase",
  "getRepoStatus",
  "getRepos",
  "getVulnerabilityAlerts",
  "initPlatform",
  "initRepo",
  "isBranchStale",
  "mergeBranch",
  "mergePr",
  "setBaseBranch",
  "setBranchPrefix",
  "setBranchStatus",
  "updatePr",
]
`;

exports[`platform has a list of supported methods for github 1`] = `
Array [
  "addAssignees",
  "addReviewers",
  "branchExists",
  "cleanRepo",
  "commitFiles",
  "createPr",
  "deleteBranch",
  "deleteLabel",
  "ensureComment",
  "ensureCommentRemoval",
  "ensureIssue",
  "ensureIssueClosing",
  "findIssue",
  "findPr",
  "getAllRenovateBranches",
  "getBranchLastCommitTime",
  "getBranchPr",
  "getBranchStatus",
  "getBranchStatusCheck",
  "getCommitMessages",
  "getFile",
  "getFileList",
  "getIssueList",
  "getPr",
  "getPrBody",
  "getPrList",
  "getRepoForceRebase",
  "getRepoStatus",
  "getRepos",
  "getVulnerabilityAlerts",
  "initPlatform",
  "initRepo",
  "isBranchStale",
  "mergeBranch",
  "mergePr",
  "setBaseBranch",
  "setBranchPrefix",
  "setBranchStatus",
  "updatePr",
]
`;

exports[`platform has a list of supported methods for gitlab 1`] = `
Array [
  "addAssignees",
  "addReviewers",
  "branchExists",
  "cleanRepo",
  "commitFiles",
  "createPr",
  "deleteBranch",
  "deleteLabel",
  "ensureComment",
  "ensureCommentRemoval",
  "ensureIssue",
  "ensureIssueClosing",
  "findIssue",
  "findPr",
  "getAllRenovateBranches",
  "getBranchLastCommitTime",
  "getBranchPr",
  "getBranchStatus",
  "getBranchStatusCheck",
  "getCommitMessages",
  "getFile",
  "getFileList",
  "getIssueList",
  "getPr",
  "getPrBody",
  "getPrList",
  "getRepoForceRebase",
  "getRepoStatus",
  "getRepos",
  "getVulnerabilityAlerts",
  "initPlatform",
  "initRepo",
  "isBranchStale",
  "mergeBranch",
  "mergePr",
  "setBaseBranch",
  "setBranchPrefix",
  "setBranchStatus",
  "updatePr",
]
`;

exports[`platform initializes 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "gitAuthor": "user@domain.com",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`platform initializes no author 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
  "hostRules": Array [
    Object {
      "hostName": "api.bitbucket.org",
      "hostType": "bitbucket",
      "password": "123",
      "username": "abc",
    },
  ],
  "platform": "bitbucket",
}
`;
